[package]
name = "helene-rust"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
signals2 = "0.3.1"
cursive = "0.20.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"

[profile.dev]
opt-level=1
debug=true

[profile.release-lto]
inherits="release"
lto="thin"