[package]
name = "helene-rust"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "*"
signals2 = "*"
cursive = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"

[profile.dev]
opt-level=1
debug=true

[profile.release-lto]
inherits="release"
lto="thin"